--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
         "mysql2": "^2.2.5",
         "sequelize": "^6.29.3"
     },
+    "engines": {
+        "node": "18.15.0",
+        "npm": "9.6.2"
+      },
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "start": "node server.js",
