--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "Model-View-Controller (MVC) Challenge.",
     "main": "server.js",
     "dependencies": {
-        "bcryptjs": "^2.4.3",
+        "bcrypt": "^5.1.0",
         "connect-session-sequelize": "^7.0.4",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
@@ -17,7 +17,7 @@
     "engines": {
         "node": "18.15.0",
         "npm": "9.6.2"
-      },
+    },
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "start": "node server.js",
